@@ -6,6 +6,8 @@ PHP 4                                                                      NEWS
   for doing performance stats without warnings in server-log. (Uwe Schindler)
 - Fixed bug #29226 (ctype_* functions missing validation of numeric string 
   representations). (Ilia)
+- Fixed bug #29209 (imap_fetchbody() doesn't check message index). (Ilia,
+  tony2001 at phpclub dot net)
 - Fixed bug #29116 (Zend constant warning uses memory after free). (Marcus,
   jdolecek at NetBSD dot org)
 - Fixed bug #29114 (Potential double free in php_stat). (Sara)
